refactor out subdomain behaviour from top level ProcessDomain with ProcessContainerDomain